# python-tusur

./: LICENSE  README.md  pyproject.toml  setup.py
.github/: python-publish.yml
.github/workflows/: test.yml
docs/: notifications.rst  ocenka.rst  timetable.rst
tests/: test_messages.py  test_notifications.py  test_ocenka.py  test_timetable.py
tusur/: __init__.py  ajax.py  authorization.py  constants.py  exceptions.py  sdo.py  session.py
